Allow editing of issues in admin panel, including uploading covers.

--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -71,7 +71,7 @@ img {
 }
 
 .issueCoverImageColumn, .issueCoverImage {
-  width: 250px;
+  width: 210px;
 }
 
 .issueDescriptionColumn p {
